# fckrman

./: CMakeLists.txt  README.md
.github/workflows/: buildit.yaml
src/: cli.cpp  cli.hpp  download.cpp  download.hpp  error.hpp  file.cpp  file.hpp  main.cpp
